fixing overflow of fixed width in col-md-2

--- a/css/theme.css
+++ b/css/theme.css
@@ -14985,10 +14985,18 @@ ul, ol {
   position: fixed;
   left: 20px;
   top: 100px;
+  width: inherit;
+  max-width: inherit;
 }
 
 #navbar-tutorial ul.nav {
   display: block;
+  margin-left: 0;
+}
+
+#navbar-tutorial li {
+  line-height: 1.2;
+  border-bottom: 1px solid #F4B824;
 }
 
 .primary-gif {
